--- a/nginxsite/.env
+++ b/nginxsite/.env
@@ -1,3 +1,7 @@
 DATABASE_NAME=montoring
 DATABASE_USER=quanghuy
 DATABASE_PASSWORD=12345678
+
+MONGO_INITDB_DATABASE=app
+MONGO_INITDB_ROOT_PASSWORD=12345678
+MONGO_INITDB_ROOT_USERNAME=quanghuy
