add docker file

--- a/collectors/.env
+++ b/collectors/.env
@@ -1,3 +1,8 @@
 DATABASE_NAME=montoring
 DATABASE_USER=quanghuy
 DATABASE_PASSWORD=12345678
+
+
+MONGO_INITDB_DATABASE=app
+MONGO_INITDB_ROOT_PASSWORD=12345678
+MONGO_INITDB_ROOT_USERNAME=quanghuy
