--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ volumes:
   broker_var: {}
   coordinator_var: {}
   router_var: {}
+
    
 services:
   postgresuser:
@@ -30,7 +31,6 @@ services:
       - nginx
   mongo:
     image: "mongo:latest"
-    container_name: mongodb
     volumes:
       - ./mongodb_data_container:/data/db
     ports:
@@ -105,7 +105,6 @@ services:
     volumes:
       - ./storage:/opt/data
       - ./coordinator_var:/opt/druid/var
-      - ./collectors:/app
     depends_on: 
       - zookeeper
       - postgres
@@ -123,7 +122,6 @@ services:
     container_name: broker
     volumes:
       - ./broker_var:/opt/druid/var
-      - ./collectors:/app
     depends_on: 
       - zookeeper
       - postgres
@@ -143,7 +141,6 @@ services:
     volumes:
       - ./storage:/opt/data
       - ./historical_var:/opt/druid/var
-      - ./collectors:/app
     depends_on: 
       - zookeeper
       - postgres
@@ -196,23 +193,25 @@ services:
   
   #kafka
   zookeeper-kafka:
-    image: wurstmeister/zookeeper
+    image: docker.io/bitnami/zookeeper:3
     ports:
       - "7181:2181"
     networks:
       - nginx
+    environment:
+      - ALLOW_ANONYMOUS_LOGIN=yes
   kafka:
-    image: wurstmeister/kafka
+    image: docker.io/bitnami/kafka:2
     ports:
       - "7092:9092"
-    environment:
-      KAFKA_ADVERTISED_HOST_NAME: 192.168.99.100
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper-kafka:2181
     networks:
       - nginx
-    volumes:
-      - ./var/run/docker.sock:/var/run/docker.sock
-
+    environment:
+      - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper-kafka:2181
+      - ALLOW_PLAINTEXT_LISTENER=yes
+    depends_on:
+      - zookeeper-kafka
+  
               
 networks:
   nginx:
