--- a/nginxsite/requirements.txt
+++ b/nginxsite/requirements.txt
@@ -61,6 +61,7 @@ psycopg2-binary==2.8.6
 ptyprocess==0.7.0
 pycparser==2.20
 Pygments==2.8.0
+pydruid==0.6.2
 PyJWT==1.7.1
 pymongo==3.11.3
 pyparsing==2.4.7
