--- a/plugin/.env
+++ b/plugin/.env
@@ -1,5 +1,5 @@
-collector_url=http://localhost:8000/api/data-raw/
+collector_url=http://collectors:8000/api/data-raw/
 app_key=f7f3d29321ed3e550ec01278b919809194ab4a9ae2
 collection_interval=60
-numbers_request=10
+numbers_request=30
 path_access_log=/var/log/nginx/access.log
